# ProxyModel

.devcontainer/: devcontainer.json
src/: proxy_model.hpp
tests/: CMakeLists.txt  main.cpp  main.qml
